fixed Auth; added white-space:nowrap

--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -6,6 +6,7 @@
   display: flex;
   font-size: 20px;
   margin: 23px 0 0 0;
+  white-space: nowrap;
 }
 .Auth .signOff {
   margin: 12px 0 0 10px;
